[project]
name = "sakura-signin"
version = "1.0.0"
description = "SakuraFRP 纯 HTTP 协议自动签到，GeeTest v3 逆向 + AI 多模态验证码识别"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx[http2]",
    "cryptography",
    "python-dotenv",
    "openai",
]

[project.scripts]
sakura-signin = "auto_signin_http:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
